--- a/src/main/resources/templates/category/newCategory.html
+++ b/src/main/resources/templates/category/newCategory.html
@@ -7,7 +7,7 @@
 <body>
     <form method="POST" action="/category">
         <label for="parentCategory">Parent category</label>
-        <input name="parentId" type="int" id="parentCategory">
+        <input name="parentId" type="number" id="parentCategory">
         <br>
         <label for="category">Category</label>
         <input name="name" type="text" id="category">
