--- a/src/main/resources/templates/category/categoryes.html
+++ b/src/main/resources/templates/category/categoryes.html
@@ -1,14 +1,18 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:th="http://www.w3.org/1999/xhtml">
+<html lang="en" xmlns:th="http://thymeleaf.org">
 <head>
     <meta charset="UTF-8">
     <title>Категории товаров</title>
 </head>
 <body>
-    <div th:each="category : ${categoryes}">
-        <a th:href="@{category/parent/{parentId}(parentId=0)}"
-            th:text="${category.getName()}"/>
-    </div>
+
+    <nav th:each="category : ${allCategory}">
+        <a th:if="${category.getParentId()==0}" th:href="@{/category/{id}(id=${category.getId()})}"  th:text="${category.getName()}"/>
+<!--            <p th:if="${category.getParentId()==0}" th:text="${category.getName()}"/>-->
+
+    </nav>
+
+
 
 </body>
 </html>
