--- a/src/main/resources/templates/product.html
+++ b/src/main/resources/templates/product.html
@@ -7,7 +7,7 @@
 </head>
 <body>
 
-<div th:replace="header"></div>
+<div th:replace="header.html"></div>
 
 <div class="container">
     <h1 th:text="${name}"></h1>
