--- a/src/main/resources/templates/product/edit.html
+++ b/src/main/resources/templates/product/edit.html
@@ -1,10 +1,22 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns:th="http://www.w3.org/1999/xhtml">
 <head>
-  <meta charset="UTF-8">
-  <title>$Title$</title>
+    <meta charset="UTF-8">
+    <title>Update</title>
 </head>
 <body>
-$END$
+<form th:method="PATCH" th:actoin="@{/product/{id}(id=${product.getId()})}" th:object="${product}">
+    <label for="name">Name</label>
+    <input type="text" th:field="*{name}" id="name">
+    <br>
+    <label for="price">Price</label>
+    <input type="text" th:field="*{price}" id="price">
+    <br>
+    <label for="category">Category ID</label>
+    <input type="text" th:field="*{category}" id="category">
+    <br>
+    <input type="submit" value="Update">
+</form>
+
 </body>
 </html>
