--- a/src/main/resources/templates/product/product.html
+++ b/src/main/resources/templates/product/product.html
@@ -12,5 +12,9 @@
 <br>
     <p th:text="'Name: ' + ${product.getName()}"/>
     <p th:text="'Price: '+ ${product.getPrice}"/>
+    <br>
+    <form th:method="post" th:action="@{/cart/{id}(id=${product.getId()})}">
+        <input type="submit" value="Add product in cart">
+    </form>
 </body>
 </html>
