--- a/src/main/resources/templates/category/categoryes.html
+++ b/src/main/resources/templates/category/categoryes.html
@@ -1,10 +1,14 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://thymeleaf.org">
 <head>
-    <meta charset="UTF-8">
+    <meta http-equiv="Content-Type" content="text/html" charset="UTF-8" />
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
     <title>Категории товаров</title>
 </head>
 <body>
+
+<div th:replace="~{header.html}"></div>
+
 
     <nav th:each="category : ${allCategory}">
         <a th:if="${category.getParentId()==0}" th:href="@{/category/{id}(id=${category.getId()})}"  th:text="${category.getName()}"/>
