--- a/src/main/resources/templates/category/subCategory.html
+++ b/src/main/resources/templates/category/subCategory.html
@@ -1,12 +1,14 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.w3.org/1999/xhtml">
 <head>
-    <meta charset="UTF-8">
-    <link rel="stylesheet"
-          href="../../CSS/category/navigation.css">
+    <meta http-equiv="Content-Type" content="text/html" charset="UTF-8" />
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
+
     <title>Sub category</title>
 </head>
 <body>
+<div th:replace="~{header.html}"></div>
+
 <div style="display:inline-block"> <a href="/category"> All </a></div>
 <div  style="display:inline-block" th:each="category : ${list}">
     <div style="display:inline-block">  <p style="display:inline-block">></p> <a th:href="@{/category/{id}(id=${category.getId()})}" th:text="${category.getName()}"/> </div>
