--- a/src/main/resources/templates/product/allProduct.html
+++ b/src/main/resources/templates/product/allProduct.html
@@ -1,11 +1,15 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.w3.org/1999/xhtml">
 <head>
-    <meta charset="UTF-8">
+    <meta http-equiv="Content-Type" content="text/html" charset="UTF-8" />
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
     <title>All products</title>
 </head>
 <body>
-    <div th:each="product : ${productList}">
+<div th:replace="~{header.html}"></div>
+
+
+<div th:each="product : ${productList}">
         <a th:href="@{/product/{id}(id=${product.getId()})}" th:text="${product.getName}"/>
     </div>
 </body>
