Used  @Transactional from buy method

--- a/src/main/resources/templates/product/new.html
+++ b/src/main/resources/templates/product/new.html
@@ -15,6 +15,8 @@
         <label for="price">Price</label>
         <input name="price" type="text" id="price">
         <br>
+        <label for="quantity">In stock</label>
+        <input name="quantity" type="text" id="quantity">
         <input type="submit" value="Add product">
     </form>
 </body>
