--- a/src/main/resources/templates/product/product.html
+++ b/src/main/resources/templates/product/product.html
@@ -18,7 +18,9 @@
     <p th:text="'Price:    '+ ${product.getPrice}"/>
     <p th:text="'For sale: ' + ${product.getQuantity}"/>
     <br>
-    <form th:method="post" th:action="@{/cart/{id}(id=${product.getId()})}">
+    <form th:method="post" th:action="@{/cart/new/{id}(id=${product.getId()})}">
+        <label fot="amount">Amount: </label>
+        <input name="amount" type="number" id="amount">
         <input type="submit" value="Add product in cart">
     </form>
 </body>
