Add users and button buy(cart)

--- a/src/main/resources/templates/users/new.html
+++ b/src/main/resources/templates/users/new.html
@@ -5,7 +5,7 @@
     <title>Creating new user</title>
 </head>
 <body>
-    <form method="POST" action="/users">
+    <form method="post" action="/user/new">
         <label for="username">Username</label>
         <input name="username" type="text" id="username">
         <br>
