--- a/src/main/resources/templates/users/users.html
+++ b/src/main/resources/templates/users/users.html
@@ -6,7 +6,7 @@
 </head>
 <body>
     <div th:each="user : ${users}">
-        <a th:href="@{/users/{id}(id=${user.getId()})}" th:text="${user.getUsername()}"/>
+        <a th:href="@{/user/{id}(id=${user.getId()})}" th:text="${user.getUsername()}"/>
     </div>
 </body>
 </html>
