--- a/src/main/resources/templates/users/user.html
+++ b/src/main/resources/templates/users/user.html
@@ -1,14 +1,13 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.w3.org/1999/xhtml">
 <head>
-    <meta charset="UTF-8">
+    <meta http-equiv="Content-Type" content="text/html" charset="UTF-8" />
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
     <title>User</title>
 </head>
 <body>
-    <p th:text="${user.getId()}"/>
-    <p th:text="${user.getUsername()}"/>
+    <p th:text="'Welcome '+ ${user.getUsername()}"/>
     <p th:text="${user.getEmail()}"/>
     <p th:text="${user.getCreateTime()}"/>
-    <a href="/users"/>
 </body>
 </html>
