--- a/src/main/resources/templates/users/new.html
+++ b/src/main/resources/templates/users/new.html
@@ -1,21 +1,27 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns:th="http://www.w3.org/1999/xhtml">
 <head>
-    <meta charset="UTF-8">
+    <meta http-equiv="Content-Type" content="text/html" charset="UTF-8" />
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
     <title>Creating new user</title>
 </head>
 <body>
-    <form method="post" action="/user/new">
+<div >
+    <form method="post" action="/user/new" th:object="${user}">
         <label for="username">Username</label>
-        <input name="username" type="text" id="username">
+        <input  name="username" th:field="*{username}" id="username">
+        <h6 style="color:red" th:if="${#fields.hasErrors('username')}" th:errors="*{username}">error</h6>
         <br>
         <label for="password">Password</label>
-        <input name="password" type="text" id="password">
+        <input name="password" th:field="*{password}" id="password">
+        <h6 style="color:red" th:if="${#fields.hasErrors('password')}" th:errors="*{password}">error</h6>
         <br>
         <label for="email">Email</label>
-        <input name="email" type="text" id="email">
+        <input name="email" th:field="*{email}" id="email">
+        <h6 style="color:red" th:if="${#fields.hasErrors('email')}" th:errors="*{email}">error</h6>
         <br>
         <input type="submit" value="Create user">
     </form>
+</div>
 </body>
 </html>
